--- a/Delivery man app/web/index.html
+++ b/Delivery man app/web/index.html
@@ -45,13 +45,13 @@
 
   <script>
     var firebaseConfig = {
-      apiKey: "AIzaSyDFN-73p8zKVZbA0i5DtO215XzAb-xuGSE",
-      authDomain: "ammart-8885e.firebaseapp.com",
-      projectId: "ammart-8885e",
-      storageBucket: "ammart-8885e.appspot.com",
-      messagingSenderId: "1000163153346",
-      appId: "1:1000163153346:web:4f702a4b5adbd5c906b25b",
-      measurementId: "G-L1GNL2YV61"
+      apiKey: "",
+      authDomain: "",
+      projectId: "",
+      storageBucket: "",
+      messagingSenderId: "",
+      appId: "",
+      measurementId: ""
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
